Unattended Test attended to, no more errors in tests